# sldl

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  setup.cfg
.github/workflows/: tests.yml
docs/: conf.py  index.rst  modules.rst  requirements.txt  sldl.image.rst  sldl.rst  sldl.video.rst
docs/_static/: custom.css
sldl/: __init__.py
sldl/_utils/: __init__.py  models.py  video.py
sldl/image/: __init__.py  bsrgan.py  denoising.py  realesrgan.py  super_resolution.py  swinir.py
sldl/utils/: __init__.py  models.py  video.py
sldl/video/: __init__.py  denoising.py  ifrnet.py  super_resolution.py  video_interpolation.py  vrt.py
tests/image/: test_denoising.py  test_sr.py
tests/video/: test_video_denoising.py  test_video_interpolation.py  test_video_sr.py
