[metadata]
name = sldl
version = attr: sldl.__version__
description = Single-line inference of SOTA deep learning models
long_description = file: README.md
long_description_content_type = text/markdown
keywords = deep learning, computer vision, super resolution, denoising
license = Apache 2.0
url = https://github.com/pilot7747/sldl
author = Nikita Pavlichenko

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Typing :: Typed

[options]
zip_safe = True
install_requires =
    numpy
    tqdm
    torch >= 1.8.1
    Pillow
    opencv-python
python_requires = >= 3.8
packages = find:
include_package_data = True

[options.packages.find]
include = sldl*
